--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nock": "^13.4.0"
+    "nock": "^13.4.0",
+    "node-fetch": "^2.6.7"
   }
 }
